--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,21 @@
 version: '3.7'
 services:
   zwave2mqtt:
-    container_name: zwave2mqtt
     image: robertslando/zwave2mqtt:latest
     restart: always
     tty: true
     stop_signal: SIGINT
-    networks:
-      - zwave
     devices:
       - '/dev/ttyACM0:/dev/ttyACM0'
     volumes:
-      - ./store:/usr/src/app/store
+      - 'zwave2mqtt:/usr/src/app/store'
     ports:
       - '8091:8091'
-networks:
-  zwave:
-# volumes:
-#   zwave2mqtt:
-#     name: zwave2mqtt
+volumes:
+  zwave2mqtt:
+    driver: local
+    driver_opts:
+      type: nfs
+      o: addr=10.0.0.2,rw,nolock,soft
+      device: ':/volume1/docker/zwave2mqtt'
 
